<?xml version="1.0"?>
<package format="2">
  <name>moro_navigation_msgs</name>
  <version>0.0.0</version>
  <description>The moro_navigation_msgs package</description>

  <maintainer email="tuomas.valimaki@tuni.fi">Tuomas Välimäki</maintainer>

  <license>MIT</license>

  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <!-- <depend>actionlib_msgs</depend> -->
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
