<?xml version="1.0"?>
<package format="2">
  <name>moro_ros</name>
  <version>0.0.0</version>
  <description>The moro_ros package</description>

  <maintainer email="tuomas.valimaki@tuni.fi">Tuomas Välimäki</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>moro_navigation</exec_depend>
  <exec_depend>moro_navigation_msgs</exec_depend>
  <exec_depend>moro_simulator</exec_depend>
  <exec_depend>moro_localization</exec_depend>
  <exec_depend>filtering_utils</exec_depend>

  <export>
    <metapackage />
  </export>
</package>
